hard-gists/4504341/run.log
=== Docker Run Log for 4504341 ===
Started at: Mi 29. Okt 14:42:15 CET 2025

[2025-10-29 14:42:16] START: Running container for 4504341
[2025-10-29 14:42:16] SUCCESS: Container 0bbb1ee1ded6f1bad6aad387e9898b0769e66798120d33b24f164ec47cba112a started for 4504341
=== Container logs for 4504341 ===
  File "/snippet.py", line 70
    except CalledProcessError, e:
           ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4504341 ===
[2025-10-29 14:42:18] INFO: Container 0bbb1ee1ded6f1bad6aad387e9898b0769e66798120d33b24f164ec47cba112a has stopped
